--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <meta name="naver-site-verification" content="754d16933a69f6e62bfd50b038f47cd765778650" />
   <title>
 		{%if page.title %}
 			{{ page.title }} - {{ site.title }}
